--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <main>
     </main>
+    
     <script src="sketch.js"></script>
+    <script src="p5.collide2d.js"></script>
 </body>
 
 </html>
